--- a/Boutique-FE/src/layout/header/header.component.html
+++ b/Boutique-FE/src/layout/header/header.component.html
@@ -57,7 +57,8 @@
   </div>
   <div class="scroll-container">
     <div class="scroll-text">
-      Contact us at: +91-9600679927 | +91-9600665848 , instaId:samepich
+      Contact us at:  9600679927 , Email:mokshedestination&#64;gmail.com, Address :  G1, Janaki Empire, 43, Periyar Pathai, Avvai Nagar, 
+      Choolaimedu, Chennai,  Tamil Nadu 600094
     </div>
   </div>
 </div>
