--- a/Boutique-FE/src/pages/homepage/homepage.component.html
+++ b/Boutique-FE/src/pages/homepage/homepage.component.html
@@ -164,10 +164,10 @@
         <!-- Customer Service Row -->
         <div class="footer-customer-service">
           <ul class="customer-service-links">
-            <li  [routerLink]="'/terms'">Terms and Conditions</li>
+            <li  [routerLink]="'/terms'">Shipping Policy</li>
             <li  [routerLink]="'/policy'">Privacy Policy</li>
-            <li  [routerLink]="'/return'">Return and Exchange Policy</li>
-            <li  [routerLink]="'/aboutus'">About Us</li>
+            <li  [routerLink]="'/return'">Return  Policy</li>
+            <!-- <li  [routerLink]="'/aboutus'">About Us</li> -->
             <!-- <li><a href="/contact-us">Contact Us</a></li> -->
           </ul>
         </div>
