changes made in privacy policy

--- a/Boutique-FE/src/app/privacypolicy/privacypolicy.component.html
+++ b/Boutique-FE/src/app/privacypolicy/privacypolicy.component.html
@@ -8,8 +8,8 @@
         <h2>Introduction</h2>
         <p>
           Certainly, Here’s a detailed paragraph for the privacy policy of your fashion 
-          website,
-           At SAME PINCH store, we value and respective privacy. This privacy policy 
+          website www.mokshedestination.com ,</p>
+          <p> At SAME PINCH store, we value and respective privacy. This privacy policy 
           explains how we connect, use and protect your personal information when you 
           visit our website. By using our website, you consent to the terms of this policy. 
           When you visit our website, personal information such as your email address, 
